--- a/docs/style.css
+++ b/docs/style.css
@@ -1,100 +1,80 @@
-div {
-  border:1px solid;
-  height:50px;
-  width:100%;
+dbody {
+
 }
-.top {
-  height:800px;
-  background-image: url("http://www.greendeity.com/wp-content/uploads/2016/08/Boardwalk.jpeg"); 
-  color:white;
+li {
+  display:inline;
+  justify-content:space-between;
+  border:2px solid black;
+  margin:25px;
+  font-family:Verdana;
+  padding:10px;
+ 
+}
+li a {
+  text-decoration:none;
+  color:#000;
+}
+.navbar{
+  border:2px solid black;
   text-align:center;
-  background-size:cover;
 }
-#one {
-  margin-top:10%;
-  font-size:60px;
-}
-#two {
+#header {
   text-align:center;
   font-size:30px;
-  color:white;
+  font-family:Verdana;
+    
 }
-#button {
-  border:2px solid white;
+#mainimg {
+  height:500px;
+  display:block;
+  margin-right:auto;
+  margin-left:auto;
+}
+.welcome {
   text-align:center;
-  font-size:40px;
-  width:200px;
-  padding:15px;
- margin:auto;
-  background-color:#4a7ed3;
-  border-radius:5px;;
-  box-shadow:0px 0px 2px rgba(0,0,0,.5), 1px 1px 5px rgba(0,0,0,.3);
-  opacity:0.8;
-  
-    
+  border:2px solid black;
+  width:60%;
+  margin-right:auto;
+  margin-left:auto;
+  font-family:Verdana;
 }
-.mid {
-  height:300px;
-  border:none;
-}
-.bottom  {
-  height:130px;
-  background-color:#e2dbd0;
-  border:none;
-}
+body {
 
-#bio {
-  display:inline-block;
-  width:500px;
-  line-height:1.8;
-  margin-left:10px;
-  vertical-align:middle;
-  font-size:20px;
-  font-weight:bold;
-  position:relative;
-  left:30%;
-  
 }
-a {
-  text-decoration:none;
-  color:white;
-}
-#button:hover {
-  width:250px;
+li {
+  display:inline;
+  justify-content:space-between;
+  border:2px solid black;
+  margin:25px;
+  font-family:Verdana;
   padding:10px;
-  margin:auto;
-  animation:pulse .8s infinite alternate;
+ 
 }
-@keyframes pulse {
-  0%{
-    transform:scale(1,1);
+li a {
+  text-decoration:none;
+  color:#000;
+}
+.navbar{
+  border:2px solid black;
+  text-align:center;
+}
+#header {
+  text-align:center;
+  font-size:30px;
+  font-family:Verdana;
     
-  }
-  100% {
-    transform: scale(1.1,1.2);
-    
-  }
-      
-  }
-img {
-  height:200px;
-  width:200px;
-  vertical-align:middle;
-  border:1px solid #CF1919;
-  position:relative;
-  left:30%;
 }
-.logo {
-  height:100px;
-  width:100px;
-  display:inline-block;
-  border:none;
-  border-radius:100%;
-  margin-top:15px;
-  position:relative;
-  left:40%;
+#mainimg {
+  height:500px;
+  display:block;
+  margin-right:auto;
+  margin-left:auto;
 }
-.logo:hover {
-  height:150px;
-  width:150px;
+.welcome {
+  text-align:center;
+  border:2px solid black;
+  width:60%;
+  margin-right:auto;
+  margin-left:auto;
+  font-family:Verdana;
 }
