--- a/docs/style.css
+++ b/docs/style.css
@@ -73,3 +73,96 @@ li a:hover {
   background-color:rgba(66, 197, 190, 1);
   
 }
+body {
+}
+li {
+  display:inline;
+  justify-content:space-between;
+  color:white;
+  margin:25px;
+  font-family:Verdana;
+  padding:10px;
+ 
+}
+li a {
+  text-decoration:none;
+  color:white;
+}
+li a:hover {
+  border-bottom:2px solid black;
+}
+.navbar{
+  border:2px solid white;
+  width:100%;
+  text-align:center;
+      background-color: rgba(66, 197, 190, 1);
+  
+}
+#header {
+  text-align:center;
+  font-size:30px;
+  font-family:Rockwell;
+    
+}
+#mainimg {
+  height:500px;
+  display:block;
+  margin-right:auto;
+  margin-left:auto;
+}
+.welcome {
+  text-align:center;
+  border:2px solid black;
+  width:60%;
+  margin-right:auto;
+  margin-left:auto;
+  font-family:Verdana;
+}
+
+#insta {
+  border-radius:5%;
+  margin-top:3px;
+}
+.logo {
+  height:40px;
+  width:40px;
+  display:inline-block;
+  justify-content:space-between;
+  border:none;
+  border-radius:100%;
+  position:relative;
+  bottom:15px;
+  left:45%;
+  margin-left:10px;
+  margin-right:10px;
+  
+}
+.logo:hover {
+  
+}
+.socialbar {
+  width:100%;
+  border:2px solid white;
+  height:50px;
+  margin:25px 0px 25px 0px;
+  background-color:rgba(66, 197, 190, 1);
+  
+}
+#schedulebutton {
+ border: white;
+  text-align:center;
+  font-size:40px;
+  width:220px;
+  
+ margin:auto;
+  background-color:#42C5BE
+  border-radius:5px;
+  box-shadow:0px 0px 2px rgba(0,0,0,.5), 1px 1px 5px rgba(0,0,0,.3);
+  opacity:0.8;   
+  
+}
+#schedulebutton a {
+  text-decoration:none;
+  color:white;
+  background-color:#42C5BE;
+}
