--- a/docs/style.css
+++ b/docs/style.css
@@ -149,15 +149,17 @@ li a:hover {
   
 }
 #schedulebutton {
- border: white;
+ border: 5px solid blue;
+  
   text-align:center;
   font-size:40px;
-  width:220px;
+  width:510px;
+  margin-top:15px;
+  margin-right:auto;
+  margin-left:auto;
+  background-color:#42C5BE;
+  border-radius:5px;;
   
- margin:auto;
-  background-color:#42C5BE
-  border-radius:5px;
-  box-shadow:0px 0px 2px rgba(0,0,0,.5), 1px 1px 5px rgba(0,0,0,.3);
   opacity:0.8;   
   
 }
