--- a/docs/style.css
+++ b/docs/style.css
@@ -22,6 +22,10 @@ li a:hover {
   width:100%;
   text-align:center;
       background-color: rgba(66, 197, 190, 1);
+  position:fixed;
+  top:-3px;
+  left:-3px;
+  right:-3px;
 }
 #header {
   text-align:center;
