--- a/docs/style.css
+++ b/docs/style.css
@@ -152,26 +152,15 @@ li a:hover {
   background-color:rgba(66, 197, 190, 1);
   
 }
-#schedulebutton {
- border: 5px solid blue;
-  
-  text-align:center;
-  font-size:40px;
-  width:510px;
-  margin-top:15px;
+figure{width:200px;height:60px;cursor:pointer;perspective:500px;-webkit-perspective:500px;}
+figure div{height:100%;transform-style:preserve-3d;-webkit-transform-style:preserve-3d;transition:0.25s;-webkit-transition:0.25s;}
+figure:hover div{transform:rotateX(-90deg);}
+span{width:100%;height:100%;position:absolute;box-sizing:border-box;border:5px solid black;font-family:'Source Sans Pro',sans-serif;line-height:50px;font-size:17pt;text-align:center;text-transform:uppercase;}
+span:nth-child(1){color:black;transform: translate3d(0, 0, 30px);-webkit-transform: translate3d(0, 0, 30px);}
+span:nth-child(2){color:black;background:white;transform: rotateX(90deg) translate3d(0, 0, 30px);-webkit-transform: rotateX(90deg) translate3d(0, 0, 30px);}
+.hoverbutton {
+  border:2px solid black;
+  width:250px;
   margin-right:auto;
   margin-left:auto;
-  background-color:#42C5BE;
-  border-radius:5px;;
-  
-  opacity:0.8;   
-  
-}
-#schedulebutton a {
-  text-decoration:none;
-  color:white;
-  background-color:#42C5BE;
-}
-#schedulebutton a:hover{
-  background-color:blue;
 }
