--- a/docs/style.css
+++ b/docs/style.css
@@ -1,3 +1,6 @@
+html {
+  min-height:100%;
+}
 body {
 
 }
@@ -75,7 +78,8 @@ li a:hover {
   height:50px;
   margin:25px 0px 25px 0px;
   background-color:rgba(66, 197, 190, 1);
-  
+  position:absolute;
+  bottom:0
 }
 body {
 }
