--- a/docs/style.css
+++ b/docs/style.css
@@ -39,6 +39,7 @@ li a:hover {
 #mainimg {
   width:70%;
   height:auto; 
+  max-height:60%;
   display:block;
   margin-right:auto;
   margin-left:auto;
